--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "5.0.0",
     "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4"
